# PolyHook_2_0

Examples/VCPKG_StaticLink/: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
Examples/VCPKG_StaticLink/overlay/polyhook2/: fix-dep.patch
